[package]
name = "cat-wasm"
version = "0.1.0"
edition = "2021"
description = "围住神经猫wasm模块"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "s"
